--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "name": "gatsby",
   "version": "1.0.0",
   "dependencies": {
+    "autoprefixer": "^10.2.6",
     "gatsby": "^3.7.2",
     "gatsby-image": "^3.7.1",
     "gatsby-plugin-manifest": "^3.7.1",
+    "gatsby-plugin-postcss": "^4.7.1",
     "gatsby-plugin-react-helmet": "^4.7.1",
+    "postcss": "^8.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^2.2.2"
   },
   "devDependencies": {
     "@vercel/node": "1.11.1"
